# ppp

./: .gitignore  README.md  data-flow-diagram.html  data-flow-diagram.md  docker-compose.yml  project-structure.html  project_structure.md  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/parsers/: base_parser.py  docling_parser.py  pdfminer_parser.py  pymupdf_parser.py  pypdf2_parser.py  utils.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorMessage.tsx  FileReview.tsx  FileUpload.tsx  LoadingSpinner.tsx  ParserSelector.tsx  ParserSettings.tsx  ResultCard.tsx  ResultGrid.tsx  ResultViewer.tsx  index.ts
frontend/src/context/: AppContext.tsx
frontend/src/types/: index.ts
revise_plans/: backend_architecture.md  banner_prompt.md  change_plan.md  directory_structure.md  frontend_improvement_v1.md
src/: main.py
src/parsers/: __init__.py  base_parser.py  docling_parser.py  pdfminer_parser.py  pymupdf_parser.py  pypdf2_parser.py
tasks/: be_task_01_infra_migration.md  be_task_02_core_api_setup.md  be_task_03_parser_refactor_base.md  be_task_04_parser_refactor_others.md  be_task_05_endpoint_logic.md  fe_task_01_setup_and_infra.md  fe_task_02_types_and_state.md  fe_task_03_input_components.md  fe_task_04_display_components.md  fe_task_05_api_integration.md  final_integration.md  int_task_01_docker_compose.md  parallel_backend.md  parallel_frontend.md  task_01_infrastructure.md  task_02_backend_implementation.md  task_03_frontend_implementation.md  task_04_integration_deployment.md
test/: README.md  conftest.py
test/src/: test_main.py
test/src/parsers/: test_docling_parser.py
